--- a/給館長.md
+++ b/給館長.md
@@ -83,11 +83,13 @@ python src/model_train_tsmixer_optuna_ParamsEnsemble.py `
   --patience 2
 
 7. `model_predict_eval.py`
--  加入 zscores, mean 返還的功能 `--scale_target zscore/mean/none`。
+- 加入 zscores, mean 返還的功能 `--scale_target zscore/mean/none`。
+- 加入 QLIKE 評估
 
 8. 新增 `model_predict_eval_ensemble.py`
 - 功能和 `model_predict_eval.py` 相似
 - 讀取 `model_base` 裡面的 `ensemble_runs` 個模型，加權平均 Eval 模型結果
+- 目前沒有 QLIKE
 
 python src/model_predict_eval_ensemble.py `
   --data Dataset/ts_data.pkl `
